# DjangoClass

./: main.py  pyproject.toml  requirements.txt
apps/authors/: urls.py
apps/authors/forms/: recipe_forms.py
apps/authors/templates/authors/partials/: login_message.html
apps/recipes/: admin.py  models.py  signals.py  urls.py  views.py
apps/recipes/templates/recipes/pages/: theory.html
apps/recipes/templates/recipes/partials/: recipeItem.html
apps/recipes/tests/: test_recipe_view_category.py  test_recipe_view_details.py  test_recipe_view_home.py  test_recipe_view_search.py
apps/tag/: admin.py  models.py
base_static/global/css/: styles.css
base_templates/global/: base.html
core/settings/: installed_apps.py
deploy/: README.md  nginx-http.conf  nginx-spa.conf
project/: settings.py  urls.py
project/settings/: environment.py  installed_apps.py  middlewares.py
utils/: strings.py
