[project]
name = "recipes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.3.0",
    "asgiref>=3.9.1",
    "attrs>=25.3.0",
    "autopep8>=2.3.2",
    "binaryornot==0.4.4",
    "certifi>=2025.8.3",
    "cffi>=1.17.1",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.3",
    "click>=8.2.1",
    "colorama==0.4.6",
    "cookiecutter>=2.6.0",
    "coverage>=7.10.3",
    "django>=5.2.5",
    "django-browser-reload >=1.18.0",
    "django-debug-toolbar>=6.0.0",
    "django-tailwind >=4.2.0",
    "docopt==0.6.2",
    "exceptiongroup>=1.3.0",
    "faker>=37.5.3",
    "flake8>=7.3.0",
    "h11>=0.16.0",
    "idna>=3.10 ",
    "iniconfig>=2.1.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.2",
    "mccabe==0.7.0",
    "mypy>=1.17.1",
    "mypy-extensions>=1.1.0",
    "outcome>=1.3.0.post0",
    "packaging>=25.0",
    "parameterized>=0.9.0",
    "Pillow>=11.3.0",
    "pluggy>=1.6.0",
    "pycodestyle>=2.14.0",
    "pycparser >=2.22 ",
    "pyflakes>=3.4.0",
    "PySocks==1.7.1",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "pytest-watch==4.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv >=1.1.1",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "selenium>=4.35.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sortedcontainers==2.4.0",
    "sqlparse>=0.5.3",
    "text-unidecode>=1.3",
    "tomli>=2.2.1",
    "trio>=0.30.0",
    "trio-websocket>=0.12.2",
    "typing-extensions>=4.14.1",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "watchdog>=6.0.0",
    "wsproto>=1.2.0",
]
